Staff edit booking status fix